# ChangeLog for media-gfx/showimg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/showimg/ChangeLog,v 1.50 2009/07/19 11:56:32 nixnut Exp $

  25 May 2010; Ladislav Láska <ladislav.laska@gmail.com> showimg-0.9.5-r2:
  Fix bug #274206 (compilation fails with gcc-4.4), EAPI=1

*showimg-0.9.5-r2 (25 May 2010)

  19 Jul 2009; nixnut <nixnut@gentoo.org> showimg-0.9.5-r1.ebuild:
  ppc stable #273889

  06 Jul 2009; Raúl Porcel <armin76@gentoo.org> showimg-0.9.5-r1.ebuild:
  sparc stable wrt #273889

  02 Jul 2009; Markus Meier <maekke@gentoo.org> showimg-0.9.5-r1.ebuild:
  amd64 stable, bug #273889

  01 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  showimg-0.9.5-r1.ebuild:
  stable x86, bug 273889

  18 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  showimg-0.9.5-r1.ebuild:
  Fix QA issues with showimg's .desktop file.

  10 Feb 2009; Carsten Lohrke <carlo@gentoo.org> -showimg-0.9.4.1.ebuild,
  showimg-0.9.5.ebuild:
  Correct dependency.

*showimg-0.9.5-r1 (09 Feb 2009)

  09 Feb 2009; Carsten Lohrke <carlo@gentoo.org>
  +files/showimg-0.9.5-gcc-4.3.patch,
  +files/showimg-0.9.5-libpqxx-2.6.9.diff, +showimg-0.9.5-r1.ebuild:
  Fix bug #229093 and #226421. Get rid of the invalid aRts dependency.

  22 Aug 2008; Markus Meier <maekke@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  19 May 2008; Tiziano Müller <dev-zero@gentoo.org> showimg-0.9.5.ebuild:
  Changed dependency for postgresql to virtual/postgresql-base

  11 May 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/showimg-0.9.5+gcc-4.3.patch, showimg-0.9.5.ebuild:
  Add patch to build with GCC 4.3, thanks to Peter Alfredsen in bug #214364.

  19 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> showimg-0.9.4.1.ebuild,
  showimg-0.9.5.ebuild:
  Update kde-base/* dependencies so that KDE 4 doesn't satisfy it. bug 206528.

  21 Jul 2007; Wulf C. Krueger <philantrop@gentoo.org> showimg-0.9.5.ebuild: