@@ -4,7 +4,7 @@ AUX showimg-0.9.5-gcc-4.3.patch 2023 RMD160 8d7dd8a8ccd67096e315ce71a0e92e81dc06
 AUX showimg-0.9.5-gcc-4.4.patch 1195 RMD160 7d4af029ce20842b07b3cbd258947249877cba06 SHA1 52a01ce6e7d0ca957df241d8108a1f4ab1c75d24 SHA256 e53daf442ebcc7d0532f04d84044b43039be13ce85338d06debef1f210fd0177
 AUX showimg-0.9.5-libpqxx-2.6.9.diff 4656 RMD160 b463c4aadfbd1cef74be1a63e5172ac4f7a5ddbd SHA1 ab381f7c121d87809f85a067df01a6b9c4c9a747 SHA256 82f7ff4ac32001da364a482f405fbe3fae902c2cc1b6133541dcad4679443530
 DIST showimg-0.9.5.tar.bz2 4117897 RMD160 150dc74f400b72a22f6a117aa3acd8201a059a39 SHA1 59d3a1f1a22761e0576d98e6cc6f430cc3822643 SHA256 d9c5e3174551272fffba1a530e83d2b2db60bb80e88af9dc2c060337e60bc105
-EBUILD showimg-0.9.5-r1.ebuild 1444 RMD160 e79987fc907eeee82620be1fd327dd3a46fdf3cb SHA1 b0cd455dfd478c8fe02d800e66a63f7fdcfdb6d2 SHA256 0b247288d584a81143610a1da32b12224a596e5ceade3282569b3481fe7e2f6c
-EBUILD showimg-0.9.5-r2.ebuild 1497 RMD160 0e51438ab96722e7463b69d957de495ec3ba0bf1 SHA1 d49500345fc447c676cc5eccaed9b73355aa9f2b SHA256 fb492565c3314d970724340c8785af46d9027ec0fba67649b91f2b32be5240d3
-MISC ChangeLog 5996 RMD160 28209347cd40a206232a8390a3e2963d045f97da SHA1 32e6c5398eead3109d260c29fdb03128f933d875 SHA256 10b7c1857a2af26fe041cadd21d6e37f606534dbf2f37732339b6d773790df0c
+EBUILD showimg-0.9.5-r1.ebuild 1443 RMD160 4099d29e631496e8aadc92a957f8c89dbaf280b4 SHA1 0037f5868791295d91f984053803fc6b2380feb5 SHA256 03e5a7614ae4052e4fea63f5f0050f6efcd92f01c20b3a4b6f51307e006382d2
+EBUILD showimg-0.9.5-r2.ebuild 1496 RMD160 1a5b1a057a2c0d80cdc92f029d4ff2c905679a22 SHA1 a437ee552646357ebbcb40b8dcef5109be83165a SHA256 cba95d9ceb9ea67efb548cd97ff3a81bf641a63095c588c856a2ee813ac207f4
+MISC ChangeLog 6222 RMD160 607c630b6fb1c28d474aef02de5e18cf2ed4fb0f SHA1 d9b1cfde0ac077d2b766fb152ac1864cf8bd1011 SHA256 f7bd95f0357cad24f81cf979deddcb43953b777cfa28e31910e25ce35b135440
 MISC metadata.xml 244 RMD160 d0dad825021e803beef87d79bb0fad320f106357 SHA1 2e2c424a4cf2fd7e286108f23aea637e44da2879 SHA256 9e924db1025e6dc7d77447f1a04baa87fee3e324394e825e3f7ace393d076139
