@@ -6,7 +6,7 @@ AUX amarok-libmp4v2-2.patch 1317 RMD160 f2af142c7acca5d2f558d121fa4cd0ded2ea044c
 AUX amarok-libmp4v2.patch 2882 RMD160 f0786378bf963e8d10db49631bb0981facd9ed90 SHA1 a60289d7c852056c27ad2d03dc09b0500f428ac3 SHA256 df4c71a25381470411ac2223ec978989e1f3fa7e784de6a0b9e1cb53eed65e06
 DIST amarok-1.4.10-post20090130.diff.tar.bz2 4050 RMD160 e1b871213d7658081ffd396a1a208f97c3f10752 SHA1 8aa7492e91529ce1e01f3d2ee8183b7d7da7cb83 SHA256 64924546008abf88f7f776b27afe3de539defcd212c79c62c6abd90a7174dbe0
 DIST amarok-1.4.10.tar.bz2 12812583 RMD160 f86c71dd0459e0cf1ff586cd6de240ca6501cf62 SHA1 cb0bebe99c6f4dc1b01601f2f3aee3a86da08fbd SHA256 4b28f86e81447b94d33c35aa0cff65d59d85da74fde2a86c5c7862c048509c9b
-EBUILD amarok-1.4.10_p20090130-r3.ebuild 3198 RMD160 c88ab563457a4dc8c226d41a32dc8b0c9a8b7418 SHA1 f98f41ac480a9c8c0d99c939fc2de1aa514a4f6b SHA256 17a78dbb7d26439930a18b9148144d3862dce12bf3201d2872fde27ac75dd66f
-EBUILD amarok-1.4.10_p20090130-r4.ebuild 3250 RMD160 2311b0259534e5a2c873b061adf6915726ee64f0 SHA1 a7faaab08cb64781f66bbb86fea5701bf054ff5c SHA256 8b22a0bec5bffab86c1463e2f92eb53bf6e9562407687a0c418ce64ec7d1e2b6
-MISC ChangeLog 56184 RMD160 8d1bd59d9fc35abefb2fb4e8395168a54cb9eae1 SHA1 02e700998beb892635e5bada8497b51459d4d259 SHA256 ac53efad9506d8e9fda0212095fed2595c48964f990fcb6c86f86222aa57b545
+EBUILD amarok-1.4.10_p20090130-r3.ebuild 3197 RMD160 2ee4723e8b5aeca83b36519d178c5be4e7baa678 SHA1 ed95f2dd2166ff6d521eab6ead84286ff6fa5191 SHA256 4602fda5aae2d8fd272783604cd96115b96c8a50b88515f6b719a7209e9ed2ae
+EBUILD amarok-1.4.10_p20090130-r4.ebuild 3249 RMD160 d0c47008a9d9d5121e4cf76b55f2f08dd6c94676 SHA1 39736b068e80dede5192a10cecc7c233cd9d8f4d SHA256 e773f8ce731f65f5124f00200316617363891980dbd97282bda5d2e2b0974b8e
+MISC ChangeLog 56430 RMD160 96965184cfc6dd5b791e7b12ad8448c6e275fdee SHA1 a54422b32f1faeacdda81cde18b07d31ca6aef00 SHA256 a12a94b26e9e23f83aeb6c4f8b297f881b73a3b668c68e76e2c36ffed32505ef
 MISC metadata.xml 2160 RMD160 60852f091cb201337c8322cad498466cd63fee1d SHA1 15af0f24c3490806e06700d05bf5341779b2b26b SHA256 49e722b9b2a370e01b0efc327486bc3e02446e0c2b4b8047dffad765a1992357
