@@ -15,7 +15,7 @@ AUX qt-3.3.8b-cjk-fix.patch 1191 RMD160 62cc0a9db2ab42b9081967033ae75b0a0eed9e93
 AUX qt-ulibc.patch 355 RMD160 9a7a01b248b7b646316cef550783569f8bdc89e2 SHA1 2f09deb7e354797ee72aa65a35c882a5ed5fd86c SHA256 6b57b1e25c1e2cebd51b8279fbcadb5e2d9bb77d19b10ea51a4f74c64bd65e2d
 DIST qt-x11-free-3.3.8b.tar.gz 17313883 RMD160 4e3cbd9c5d4719b5d33e961e6595d7b215788c8b SHA1 745def6250dc7f337dbb265e20bf38dcb41fd854 SHA256 1b7a1ff62ec5a9cb7a388e2ba28fda6f960b27f27999482ebeceeadb72ac9f6e
 DIST qt-x11-immodule-unified-qt3.3.8-20070321-gentoo.diff.bz2 137387 RMD160 7f4f79c95faa2b8e71a78308af8feae5f6a6b06a SHA1 230cc532f1a3023967c5aee4cce87d1b9351b73d SHA256 06994304d2b7c699c4b6ea4183877652e261170f74282e89a3700ce6d4a98918
-EBUILD qt-3.3.8b-r1.ebuild 10838 RMD160 a9c0ded9c44f493a37f2433be024bd1ddb99e4d6 SHA1 945f2677c458d567ec859f9eb330fbaa0d70450a SHA256 28cfb44d27c0df0b5a4b02daaa05d30bb65a04fdad7ff8efd693adc8c1864dda
-EBUILD qt-3.3.8b-r2.ebuild 10856 RMD160 f898775a033889efca89bdafd706ee9dcb31231f SHA1 03dd74588d15cf6943c04e523b5aecae33a30af1 SHA256 70d0f4cc1077c2fcb87344937ee4ff0c774f92b42c79c9f32f9dac6d9e03b7cc
-MISC ChangeLog 48310 RMD160 2137250c8fda2fcb446d284cfb6bfef70389cf5c SHA1 f78bba26d4d3715f1f351d476f95a38304e9acbf SHA256 68d0c7f8e6758b746042f21eb44ad4b3eef96ac47b3ee240310edacabded90f8
+EBUILD qt-3.3.8b-r1.ebuild 10837 RMD160 2d93ca0d589c4accd52efd9428da86907f2ac385 SHA1 a37b1528f66f16ad4f8edf803f1e4723be7cbe09 SHA256 f1045feb075429dc3f6672374dd58ab6e7eb43fba1ae307c5ebfc99744bcdd46
+EBUILD qt-3.3.8b-r2.ebuild 10855 RMD160 dc33949a404dadb94212dc2414e7b227e4071f1e SHA1 5ac513b66c93cfed6ca7f93b0b14dee7d9a62075 SHA256 abd0892f5bdbec1998c9bdda5b2d54f82d8bc198c75ea6dee8d4758d6b227a37
+MISC ChangeLog 48530 RMD160 996e6d6f79b4ea2fe6a72aedecdef9880144e43b SHA1 ff7c7881b2d3d3ec80dd09304ad7647ecceac7f2 SHA256 0f555c39acf507b06d913d113fee5b35448c1990bef939236d8e47ae8a48f6e7
 MISC metadata.xml 335 RMD160 76be6bdf3a132836b4cf22c0a8a45f29efe4af83 SHA1 5f6aa35732fc54d6b10f9dc113b07e26b0513159 SHA256 53934f5173007d42204665e1561d36656c6ecf587162b8eb4e289fcfa88c577a
