@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-gfx/showimg/ChangeLog,v 1.50 2009/07/19 11:56:32 nixnut Exp $
 
+  04 Sep 2010; Ladislav Láska <ladislav.laska@gmail.com> showimg-0.9.5-r2.ebuild, 
+  showimg-0.9.5-r1.ebuild:
+  Changed dependency from virtual/postgresql-base to dev-db/postgresql-base,
+  since the former no longer exists.
+
   25 May 2010; Ladislav Láska <ladislav.laska@gmail.com> showimg-0.9.5-r2:
   Fix bug #274206 (compilation fails with gcc-4.4), EAPI=1
 
